--- a/app/assets/stylesheets/components/_sections_nav.scss
+++ b/app/assets/stylesheets/components/_sections_nav.scss
@@ -1,5 +1,6 @@
 .links ul{
-	display: flex;
+  display: flex;
+  flex-wrap: wrap;
 	font-family: $sans-serif;
   font-size: 15px;
   justify-content: center;
